--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -62,28 +62,48 @@
                 android:id="@+id/registerPassWord"
                 android:layout_width="match_parent"
                 android:layout_height="30dp"
+                android:background="@android:color/white"
                 android:hint="密码"
+                android:inputType="textPassword"
                 android:maxLines="1"
-                android:singleLine="true"
-                android:background="@android:color/white"/>
+                android:singleLine="true"/>
 
         </android.support.design.widget.TextInputLayout>
 
-        <android.support.design.widget.TextInputLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="2dp">
+            android:orientation="horizontal"
+            android:weightSum="10">
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="9"
+                android:padding="2dp">
 
-            <EditText
-                android:id="@+id/registerPassWordagain"
-                android:layout_width="match_parent"
-                android:layout_height="30dp"
-                android:hint="确认密码"
-                android:maxLines="1"
-                android:singleLine="true"
-                android:background="@android:color/white"/>
+                <EditText
+                    android:id="@+id/registerPassWordagain"
+                    android:layout_width="match_parent"
+                    android:layout_height="30dp"
+                    android:layout_weight="9"
+                    android:background="@android:color/white"
+                    android:hint="确认密码"
+                    android:inputType="textPassword"
+                    android:maxLines="1"
+                    android:singleLine="true"/>
 
-        </android.support.design.widget.TextInputLayout>
+            </android.support.design.widget.TextInputLayout>
+            <TextView
+                android:id="@+id/judgePass"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textStyle="bold"
+                android:textColor="@color/checkpassWordWrong"/>
+
+        </LinearLayout>
+
     </LinearLayout>
     <Button
         android:id="@+id/ensure_create"
