--- a/app/src/main/res/layout/activity_create_new_plan.xml
+++ b/app/src/main/res/layout/activity_create_new_plan.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.olituc.designshot.CreateNewPlanActivity"
     android:fitsSystemWindows="true"
     android:background="@color/activity_background_color"
@@ -76,7 +77,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="20dp"
                     android:background="@android:color/white"
-                    android:hint="例如: 2018-01-01 06:00"/>
+                    android:hint="日期"/>
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -162,6 +163,27 @@
 
         </LinearLayout>
         <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_marginRight="20dp"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="是否同步"/>
+            <com.olituc.designshot.Utils.SwitchButton
+                android:id="@+id/switch_create_plan_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right"
+                android:clickable="false"
+                app:sb_checked_color="@color/colorAccent"
+                android:tooltipText="是否共享"/>
+        </LinearLayout>
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
@@ -171,7 +193,8 @@
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:layout_margin="20dp"
-                android:src="@drawable/camera"/>
+                android:src="@drawable/camera"
+                android:onClick="addANewPlanPic"/>
         </LinearLayout>
 
     </LinearLayout>
