--- a/app/src/main/res/layout/activity_show_location.xml
+++ b/app/src/main/res/layout/activity_show_location.xml
@@ -6,16 +6,25 @@
     android:layout_height="match_parent"
     tools:context="com.olituc.designshot.ShowLocationActivity"
     android:weightSum="3"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#ffffff">
 
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"/>
     <ImageView
         android:id="@+id/iv_show_location_image"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="0.8"
         android:layout_gravity="center"
         android:padding="20dp"
         android:src="@drawable/searh"/>
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -57,7 +66,31 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_margin="10dp"
+        android:layout_weight="0.6"
+        android:layout_margin="20dp"
         android:background="@drawable/bell"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="0.2"
+        android:weightSum="2"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="删除"
+            android:onClick="DeleteSpotShowClick"/>
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="返回"
+            android:onClick="CloseSpotShowClick"/>
+    </LinearLayout>
+
 </LinearLayout>
