--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,13 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="tomorrow_weather_background">#4d68fd</color>
-    <color name="day_after_tomorrow_weather_background">#3451f1</color>
-    <color name="day_more_after_weather_background">#1a3ae7</color>
+    <color name="today_weather_background">#4d68fd</color>
+    <color name="tomorrow_weather_background">#3451f1</color>
+    <color name="the_day_after_tomorrow_weather_background">#1a3ae7</color>
     <color name="last_day_background">#0222cf</color>
     <color name="activity_background_color">#ffffff</color>
     <color name="font_color">#90000000</color>
+    <color name="transparent">#50ffffff</color>
+    <color name="checkpassWordWrong">#ff0000</color>
+    <color name="checkpassWordRight">#00ff00</color>
 </resources>
